--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
 <h1>Hola, me llamo Derek</h1>
+<style>
+#home a:link {
+    color: skyblue;
+    text-decoration: none;
+    background-color: black;
+    display: inline-block;
+    text-align: center;
+    padding: 10px 10px;
+}
+
+#home a:visited {
+    color: skyblue;
+    text-decoration: line-through;
+    background-color: black;
+    display: inline-block;
+    text-align: center;
+    padding: 10px 10px;
+    
+}
+
+#home a:hover {
+    color: blue;
+    text-decoration: underline;
+    background-color: black;
+    display: inline-block;
+    text-align: center;
+    padding: 10px 10px;
+}
+
+#home a:active {
+    color: darkblue;
+    text-decoration: none;
+    background-color: black;
+    display: inline-block;
+    text-align: center;
+    padding: 10px 10px;
+}
+#home{ float: left;
+       padding-left: 15px;
+       position:absolute;
+       top:0;
+       padding:0;
+       margin-left: -5px;
+       margin-top: 3px;
+    }
+</style>     
+</head>
+ <body>
+<center>
+<h2 id="home"><a href="../LabIndex.html">Back</a></h2>    
+ <h1> Digital Design <br>
+Lab 4 <br>
+by <br>
+Derek Lee <br> 
+9/29/17 <br>
+ </h1>     
+<table border="6">
+ <th> Color </th>
+ <th> Hexadecimal </th>
+ <th> Hue </th>
+<tr>
+ <td> Moccasin </td>
+ <td> #ffe4b5 </td>
+ <td style="width:50%" bgcolor="#ffe4b5"> </td> 
+<tr>
+ <td> Dark Green </td>
+ <td> #006400 </td> 
+ <td style="width:50%" bgcolor="#006400"> </td>
+<tr>
+ <td> Cornsilk </td>
+ <td> #FFF8DC </td>
+ <td style="width:50%" bgcolor="#FFF8DC"> </td>
+<tr>
+ <td> Lightgray </td>
+ <td> #d3d3d3 </td>
+ <td style="width:50%" bgcolor="#d3d3d3"> </td> 
+<tr>
+ <td> PaleVioletRed </td>
+ <td> #db7093 </td>
+ <td style="width:50%" bgcolor="#db7093"> </td>
+<tr>
+ <td> Green Yellow </td>
+ <td> #ADFF2F </td>
+ <td style="width:50%" bgcolor="#ADFF2F"> </td> 
+<tr>
+ <td> Light Sky Blue </td>
+ <td> #87CEFA </td>
+ <td style="width:50%" bgcolor="#87CEFA"> </td> 
+<tr>
+ <td> Seashell </td>
+ <td> #FFF5EE </td>
+ <td style="width:50%" bgcolor="#FFF5EE"> </td> 
+
+<tr>
+ <td> Lime </td>
+ <td> #00FF00 </td>
+ <td style="width:50%" bgcolor="#00FF00"> </td> 
+<tr>
+ <td> Navy </td>
+ <td> #000080 </td>
+ <td style="width:50%" bgcolor="#000080"> </td> 
+<tr>
+ <td> Salmon </td>
+ <td> #FA8072 </td>
+ <td style="width:50%" bgcolor="#FA8072"> </td> 
+<tr>
+ <td> Maroon </td>
+ <td> #800000 </td>
+ <td style="width:50%" bgcolor="#800000"> </td> 
+<tr>
+ <td> Ghost White </td>
+ <td> #f8f8ff </td>
+ <td style="width:50%" bgcolor="#f8f8ff"> </td> 
+<tr>
+ <td> Purple </td>
+ <td> #800080 </td>
+ <td style="width:50%" bgcolor="#800080"> </td> 
+ </body>
+
+
